--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^3.10.3",
     "next": "12.0.7",
+    "next-themes": "^0.0.15",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/react": "^17.0.38",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.11"
   }
 }
